@@ -32,6 +32,7 @@ Version 0.6.0~dev
 	* Support dnxhd codec in ffmpeg worker, closes: #5900.
 	* Support pcm codec in ffmpeg worker.
 	* Update and make mpeg2_transcode params more consistent.
+	* Add enable_fourcc_tagging option for xdcamhd and imx codec in ffmpeg worker.
 
 Version 0.5.0 Released on 2012/03/29
 
